<resources>
    <string name="app_name">Test-3</string>
    <string name="dsc_back">Back side</string>
    <string name="dsc_front">Front page</string>
    <string name="score">0</string>
    <string name="dscScore">point</string>
    <string name="dscRedButton">Red button</string>
    <string name="dscBlackButton">Black button</string>
    <string name="dscHeartIcon">hearts</string>
    <string name="dscdiamondIcon">diamonds</string>
    <string name="dscClubIcon">clubs</string>
    <string name="dscSpadeIcon">spades</string>
    <string name="dscBackButton">ToBackMenu</string>
    <string name="back">Back</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="app_title">Color\nor Suit</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="points_text">Points</string>
    <string name="play">Play</string>
    <string name="start_play">Start_play</string>
    <string name="open_settings">Open settings</string>
    <string name="info_about_the_app">Info about the app</string>
    <string name="color_or_suit">Color or Suit</string>
    <string name="sound">Sound</string>
    <string name="turn_the_sound">Turn the sound on or off</string>
    <string name="other_settings">Degree of difficulty</string>
    <string name="select_an_option">Select an option</string>
    <string name="view_available_options">View available options</string>
    <string-array name="example_list_entries">
        <item>Alternative 1</item>
        <item>Alternative 2</item>
        <item>Alternative 3</item>
    </string-array>

    <string-array name="example_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>